--- a/QO/Isomeria/IsomeriaOptica.org
+++ b/QO/Isomeria/IsomeriaOptica.org
@@ -10,4 +10,6 @@ https://www.fcav.unesp.br/Home/departamentos/tecnologia/LUCIANAMARIASARAN/aula-i
 
 - Tipo de isomeria em que uma molécula é a imagem especular da outra.
 - Ocorre em moléculas que não apresentam plano de simetria (moléculas assimétricas).
-- Isômeros Óticos ou Enantiomorfos ou Enantiômeros.   
+- *Isômeros Óticos* ou *Enantiomorfos* ou *Enantiômeros*
+
+
