--- a/QO/Isomeria/IsomeriaGeometrica.org
+++ b/QO/Isomeria/IsomeriaGeometrica.org
@@ -1,3 +1,63 @@
-* Isomeria Geométrica
+
+
+* Isomeria Geometrica
 
 ** Isomeria Geométrica
+
+
+
+
+ -  Conhecida como a isomeria /cis-trans/.
+ -  Ocorre em compostos com dupla ligação ou cíclicos .
+ - Compostos com dupla ligação
+#+begin_export latex
+\begin{center}
+\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1,xscale=1]
+[   oxygen/.style={circle, ball color=red, minimum size=6mm, inner sep=0},
+    hydrogen/.style={circle, ball color=white, minimum size=2.5mm, inner sep=0},
+    carbon/.style={circle, ball color=black!75, minimum size=7mm, inner sep=0}
+]
+\draw   (196.35,141.5) -- (330.17,141.5) -- (272.82,186) -- (139,186) -- cycle ;
+\end{tikzpicture}
+\end{center}
+#+end_export
+
+
+** Exemplos
+
+#+begin_question
+(*UERJ*) O ácido linoleico, essencial à dieta humana, apresenta a seguinte fórmula estrutural espacial:
+
+#+begin_export latex
+%\chemfig{-[:330]-[:30]-[:330]-[:30]-[:330]=[:30]-[:330]-[:30]=[:330]-[:30]%
+%-[:330]-[:30]-[:330]-[:30]-[:330]-[:30]-[:330](=[:30]O)-[:270]H}
+{\scriptsize
+\centering 
+\chemfig{OH-[:150,,1](=[:90]O)-[:210]-[:150]-[:210]-[:150]-[:210]-[:150]%
+-[:210]-[:150]=[:210]-[:270]-[:210]=[:150]-[:90]-[:150]-[:90]-[:150]-[:90]}
+}
+#+end_export
+
+Como é possível observar, as ligações duplas presentes nos átomos de carbono 9 e 12 afetam o formato espacial da molécula. As conformações espaciais nessas ligações duplas são denominadas, respectivamente:
+
+#+ATTR_LATEX: :options (2)
+#+begin_choice
+\choice cis e cis
+\choice cis e trans
+\choice trans e cis
+\choice trans e trans
+#+end_choice 
+#+end_question 
+
+** 
+
+#+begin_answer
+Analisando as duas insaturações das moléculas, observa-se que os ligantes não mostrados são átomos de hidrogênio. Em ambas as insaturações, os átomos de hidrogênio estão do mesmo lado da ligação dupla, logo estão em posição *cis*.
+
+#+begin_export latex
+\chemfig{OH-[:150,,1](=[:90]O)-[:210]-[:150]-[:210]-[:150]-[:210]-[:150]%
+-[:210]-[:150](-[:90]H)=[:210](-[:150]H)-[:270]-[:210](-[:270]H)=[:150](%
+-[:210]H)-[:90]-[:150]-[:90]-[:150]-[:90]}
+#+end_export
+
+#+end_answer
